Changed Java 9 to 11